--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <title>James Fanuel N. Damaso</title>
   
   <!-- Favicon (replace with your custom logo if needed) -->
-  <link rel="icon" href="img/code-logo.png" type="image/png" />
+  <!-- Changes -->
+  <link rel="icon" href="img/code-logo.png" type="image/png" /> 
   
   <!-- External Fonts (Optional) -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
