--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <!-- Favicon (replace with your custom logo if needed) -->
   <!-- Changes -->
-  <link rel="icon" href="img/code-logo.png" type="image/png" /> 
+  <link rel="icon" href="/code-logo.png" type="image/png" /> 
   
   <!-- External Fonts (Optional) -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
